// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-memo > a list the previous render did not show starts without memos 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { memoPrevious, memoKeep, memoHit, prepareList, safeOutput, withKey } = helpers;
  
  let block2 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block4 = createBlock(\`<li><block-child-0/></li>\`);
  
  return function template(ctx, node, key = "") {
    let b2;
    if (ctx['this'].state.shown) {
      const memo1_site = key + \`__1\`;
      const memo1_previous = memoPrevious(node, memo1_site);
      const memo1_next = new Map();
      const ctx1 = ctx;
      const [k_block3, v_block3, l_block3, c_block3] = prepareList(ctx['this'].state.rows);
      for (let i1 = 0; i1 < l_block3; i1++) {
        let ctx = Object.create(ctx1);
        ctx["row"] = k_block3[i1];
        const key1 = ctx['row'].id;
        const deps1 = [];
        const hit1 = memoHit(memo1_previous, key1, deps1);
        if (hit1 !== undefined) {
          c_block3[i1] = hit1.vnodes[hit1.index];
          memo1_next.set(key1, { deps: deps1, vnodes: c_block3, index: i1 });
          continue;
        }
        const b5 = safeOutput(ctx['row'].label, key, "__2", 1, key1);
        c_block3[i1] = withKey(block4([], [b5]), key1);
        memo1_next.set(key1, { deps: deps1, vnodes: c_block3, index: i1 });
      }
      memoKeep(node, memo1_site, memo1_next);
      const b3 = list(c_block3);
      b2 = block2([], [b3]);
    }
    return multi([b2]);
  }
}"
`;

exports[`t-memo > a memoized list in a template called twice keeps each call's items apart 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, zero, callTemplate } = helpers;
  
  let block2 = createBlock(\`<p><block-child-0/></p>\`);
  
  return function template(ctx, node, key = "") {
    const b3 = safeOutput(ctx['this'].state.title, key, "__1");
    const b2 = block2([], [b3]);
    const b4 = callTemplate(\`__template__999\`, this, app, Object.assign(Object.create(ctx), {rows: ctx['this'].state.left, side: 'left', [zero]: null}), node, key + \`__2\`);
    const b5 = callTemplate(\`__template__999\`, this, app, Object.assign(Object.create(ctx), {rows: ctx['this'].state.right, side: 'right', [zero]: null}), node, key + \`__3\`);
    return multi([b2, b4, b5]);
  }
}"
`;

exports[`t-memo > a memoized list in a template called twice keeps each call's items apart 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { memoPrevious, memoKeep, memoHit, prepareList, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block3 = createBlock(\`<li><block-child-0/>:<block-child-1/></li>\`);
  
  return function template(ctx, node, key = "") {
    const memo1_site = key + \`__1\`;
    const memo1_previous = memoPrevious(node, memo1_site);
    const memo1_next = new Map();
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['rows']);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["row"] = k_block2[i1];
      const key1 = ctx['row'].id;
      const deps1 = [ctx['row'].label];
      const hit1 = memoHit(memo1_previous, key1, deps1);
      if (hit1 !== undefined) {
        c_block2[i1] = hit1.vnodes[hit1.index];
        memo1_next.set(key1, { deps: deps1, vnodes: c_block2, index: i1 });
        continue;
      }
      const b4 = safeOutput(ctx['side'], key, "__2", 1, key1);
      const b5 = safeOutput(ctx['row'].label, key, "__3", 1, key1);
      c_block2[i1] = withKey(block3([], [b4, b5]), key1);
      memo1_next.set(key1, { deps: deps1, vnodes: c_block2, index: i1 });
    }
    memoKeep(node, memo1_site, memo1_next);
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-memo > a render superseded before it is applied leaves memos the next one can use 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent, memoPrevious, memoKeep, memoHit, prepareList, safeOutput, withKey } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  let block3 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block5 = createBlock(\`<li><block-child-0/></li>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].state.value}, key + \`__1\`, node, this, null);
    const memo1_site = key + \`__2\`;
    const memo1_previous = memoPrevious(node, memo1_site);
    const memo1_next = new Map();
    const ctx1 = ctx;
    const [k_block4, v_block4, l_block4, c_block4] = prepareList(ctx['this'].state.rows);
    for (let i1 = 0; i1 < l_block4; i1++) {
      let ctx = Object.create(ctx1);
      ctx["row"] = k_block4[i1];
      const key1 = ctx['row'].id;
      const deps1 = [ctx['row'].label];
      const hit1 = memoHit(memo1_previous, key1, deps1);
      if (hit1 !== undefined) {
        c_block4[i1] = hit1.vnodes[hit1.index];
        memo1_next.set(key1, { deps: deps1, vnodes: c_block4, index: i1 });
        continue;
      }
      const b6 = safeOutput(ctx['row'].label, key, "__3", 1, key1);
      c_block4[i1] = withKey(block5([], [b6]), key1);
      memo1_next.set(key1, { deps: deps1, vnodes: c_block4, index: i1 });
    }
    memoKeep(node, memo1_site, memo1_next);
    const b4 = list(c_block4);
    const b3 = block3([], [b4]);
    return multi([b2, b3]);
  }
}"
`;

exports[`t-memo > a render superseded before it is applied leaves memos the next one can use 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.value, key, "__1");
    return block1([], [b2]);
  }
}"
`;

exports[`t-memo > an item whose dependencies are unchanged keeps its previous content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { memoPrevious, memoKeep, memoHit, prepareList, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block3 = createBlock(\`<li block-attribute-0="class"><block-child-0/>/<block-child-1/></li>\`);
  
  return function template(ctx, node, key = "") {
    const memo1_site = key + \`__1\`;
    const memo1_previous = memoPrevious(node, memo1_site);
    const memo1_next = new Map();
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.rows);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["row"] = k_block2[i1];
      const key1 = ctx['row'].id;
      const deps1 = [ctx['row'].label];
      const hit1 = memoHit(memo1_previous, key1, deps1);
      if (hit1 !== undefined) {
        c_block2[i1] = hit1.vnodes[hit1.index];
        memo1_next.set(key1, { deps: deps1, vnodes: c_block2, index: i1 });
        continue;
      }
      let attr1 = {on:ctx['row'].id===ctx['this'].state.selected};
      const b4 = safeOutput(ctx['row'].label, key, "__2", 1, key1);
      const b5 = safeOutput(ctx['row'].note, key, "__3", 1, key1);
      c_block2[i1] = withKey(block3([attr1], [b4, b5]), key1);
      memo1_next.set(key1, { deps: deps1, vnodes: c_block2, index: i1 });
    }
    memoKeep(node, memo1_site, memo1_next);
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-memo > memoized items move, disappear and come back with the right content 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { memoPrevious, memoKeep, memoHit, prepareList, safeOutput, withKey } = helpers;
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block3 = createBlock(\`<li><block-child-0/></li>\`);
  
  return function template(ctx, node, key = "") {
    const memo1_site = key + \`__1\`;
    const memo1_previous = memoPrevious(node, memo1_site);
    const memo1_next = new Map();
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.rows);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["row"] = k_block2[i1];
      const key1 = ctx['row'].id;
      const deps1 = [ctx['row'].label];
      const hit1 = memoHit(memo1_previous, key1, deps1);
      if (hit1 !== undefined) {
        c_block2[i1] = hit1.vnodes[hit1.index];
        memo1_next.set(key1, { deps: deps1, vnodes: c_block2, index: i1 });
        continue;
      }
      const b4 = safeOutput(ctx['row'].label, key, "__2", 1, key1);
      c_block2[i1] = withKey(block3([], [b4]), key1);
      memo1_next.set(key1, { deps: deps1, vnodes: c_block2, index: i1 });
    }
    memoKeep(node, memo1_site, memo1_next);
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;

exports[`t-memo > nested memoized lists keep the items of each outer item apart 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, prepareList, memoPrevious, memoKeep, memoHit, withKey, keyOf } = helpers;
  
  let block2 = createBlock(\`<p><block-child-0/></p>\`);
  let block5 = createBlock(\`<div><ul><block-child-0/></ul></div>\`);
  let block7 = createBlock(\`<li><block-child-0/>:<block-child-1/></li>\`);
  
  return function template(ctx, node, key = "") {
    const b3 = safeOutput(ctx['this'].state.title, key, "__1");
    const b2 = block2([], [b3]);
    const ctx1 = ctx;
    const [k_block4, v_block4, l_block4, c_block4] = prepareList(ctx['this'].state.groups);
    for (let i1 = 0; i1 < l_block4; i1++) {
      let ctx = Object.create(ctx1);
      ctx["group"] = k_block4[i1];
      const key1 = ctx['group'].id;
      const skey1 = keyOf(key1);
      const memo1_site = key + \`__2__\${skey1}\`;
      const memo1_previous = memoPrevious(node, memo1_site);
      const memo1_next = new Map();
      const ctx2 = ctx;
      const [k_block6, v_block6, l_block6, c_block6] = prepareList(ctx['group'].items);
      for (let i2 = 0; i2 < l_block6; i2++) {
        let ctx = Object.create(ctx2);
        ctx["item"] = k_block6[i2];
        const key2 = ctx['item'].id;
        const deps2 = [ctx['item'].label];
        const hit2 = memoHit(memo1_previous, key2, deps2);
        if (hit2 !== undefined) {
          c_block6[i2] = hit2.vnodes[hit2.index];
          memo1_next.set(key2, { deps: deps2, vnodes: c_block6, index: i2 });
          continue;
        }
        const b8 = safeOutput(ctx['group'].id, key, "__3", 2, key1, key2);
        const b9 = safeOutput(ctx['item'].label, key, "__4", 2, key1, key2);
        c_block6[i2] = withKey(block7([], [b8, b9]), key2);
        memo1_next.set(key2, { deps: deps2, vnodes: c_block6, index: i2 });
      }
      memoKeep(node, memo1_site, memo1_next);
      const b6 = list(c_block6);
      c_block4[i1] = withKey(block5([], [b6]), key1);
    }
    const b4 = list(c_block4);
    return multi([b2, b4]);
  }
}"
`;

exports[`t-memo > rejects an item it could not skip, and dependencies that are not an array 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { memoPrevious, memoKeep, memoHit, prepareList, withKey } = helpers;
  
  let block1 = createBlock(\`<ul><block-child-0/></ul>\`);
  let block3 = createBlock(\`<li/>\`);
  
  return function template(ctx, node, key = "") {
    const memo1_site = key + \`__1\`;
    const memo1_previous = memoPrevious(node, memo1_site);
    const memo1_next = new Map();
    const ctx1 = ctx;
    const [k_block2, v_block2, l_block2, c_block2] = prepareList(ctx['this'].state.rows);
    for (let i1 = 0; i1 < l_block2; i1++) {
      let ctx = Object.create(ctx1);
      ctx["row"] = k_block2[i1];
      const key1 = ctx['row'].id;
      const deps1 = ctx['row'].id;
      const hit1 = memoHit(memo1_previous, key1, deps1);
      if (hit1 !== undefined) {
        c_block2[i1] = hit1.vnodes[hit1.index];
        memo1_next.set(key1, { deps: deps1, vnodes: c_block2, index: i1 });
        continue;
      }
      c_block2[i1] = withKey(block3(), key1);
      memo1_next.set(key1, { deps: deps1, vnodes: c_block2, index: i1 });
    }
    memoKeep(node, memo1_site, memo1_next);
    const b2 = list(c_block2);
    return block1([], [b2]);
  }
}"
`;
